@@ -166,14 +166,14 @@
 		<dd><a href="predicates.html#predicates_objects">Object predicates</a><span class="leader"></span><span class="page-ref"><span class="predicates_objects"></span></span></dd>
 		<dd><a href="predicates.html#predicates_categories">Category predicates</a><span class="leader"></span><span class="page-ref"><span class="predicates_categories"></span></span></dd>
 		<dd><a href="predicates.html#predicates_metadef">Meta-predicates</a><span class="leader"></span><span class="page-ref"><span class="predicates_metadef"></span></span></dd>
-		<dd><a href="predicates.html#predicates_dcgs">Definite clause grammars</a><span class="leader"></span><span class="page-ref"><span class="predicates_dcgs"></span></span></dd>
+		<dd><a href="predicates.html#predicates_dcgs">Definite clause grammar rules</a><span class="leader"></span><span class="page-ref"><span class="predicates_dcgs"></span></span></dd>
 	<dt><a href="predicates.html#predicates_methods">Built-in object predicates (methods)</a><span class="leader"></span><span class="page-ref"><span class="predicates_methods"></span></span></dt>
 		<dd><a href="predicates.html#predicates_context">Execution context methods</a><span class="leader"></span><span class="page-ref"><span class="predicates_context"></span></span></dd>
 		<dd><a href="predicates.html#predicates_database">Database methods</a><span class="leader"></span><span class="page-ref"><span class="predicates_database"></span></span></dd>
 		<dd><a href="predicates.html#predicates_metacalls">Meta-call methods</a><span class="leader"></span><span class="page-ref"><span class="predicates_metacalls"></span></span></dd>
 		<dd><a href="predicates.html#predicates_solutions">All solutions methods</a><span class="leader"></span><span class="page-ref"><span class="predicates_solutions"></span></span></dd>
 		<dd><a href="predicates.html#predicates_reflection">Reflection methods</a><span class="leader"></span><span class="page-ref"><span class="predicates_reflection"></span></span></dd>
-		<dd><a href="predicates.html#predicates_parsing">Definite clause grammar parsing methods</a><span class="leader"></span><span class="page-ref"><span class="predicates_parsing"></span></span></dd>
+		<dd><a href="predicates.html#predicates_parsing">Definite clause grammar parsing methods and non-terminals</a><span class="leader"></span><span class="page-ref"><span class="predicates_parsing"></span></span></dd>
 		<dd><a href="predicates.html#predicates_expanding">Term and goal expansion methods</a><span class="leader"></span><span class="page-ref"><span class="predicates_expanding"></span></span></dd>
 	<dt><a href="predicates.html#predicates_properties">Predicate properties</a><span class="leader"></span><span class="page-ref"><span class="predicates_properties"></span></span></dt>
 	<dt><a href="predicates.html#predicates_finding">Finding declared predicates</a><span class="leader"></span><span class="page-ref"><span class="predicates_finding"></span></span></dt>
